# Maquina-de-Venda

./: CMakeLists.txt  README.md  interface.cpp  interface.h  main  main.cpp  maquina.cpp  maquina.h  produto.cpp  produto.h
db/: admExistentes.json  fluxoCaixa.json  produtos.json
inc/: adm.h  caixa.h  conta.h  interface.h  maquina.h  pagamento.h  pagamentocartao.h  pagamentodinheiro.h  produtos.h  usuarios.h
inc/adm/: adm.h
inc/interface/: interface.h
inc/maquina/: maquina.h
inc/produtos/: produtos.h
inc/usuarios/: usuarios.h
output/: main
produtos/: produto.cpp
src/: adm.cpp  caixa.cpp  conta.cpp  interface.cpp  main.cpp  maquina.cpp  pagamento.cpp  pagamentocartao.cpp  pagamentodinheiro.cpp  produtos.cpp  usuarios.cpp
src/adm/: adm.cpp
src/interface/: interface.cpp
src/maquina/: maquina.cpp
src/produtos/: produtos.cpp
src/usuarios/: usuarios.cpp
test/: adm2.cpp  adm2.h  maquina2.cpp  maquina2.h  pagamento2.cpp  pagamento2.h  pagamentocartao2.cpp  pagamentocartao2.h  pagamentodinheiro2.cpp  pagamentodinheiro2.h
usuarios/: usuario.cpp  usuario.h
usuarios/adm/: adm.cpp  adm.h
